--- a/src/app/page/account/account-detail/account-detail.component.css
+++ b/src/app/page/account/account-detail/account-detail.component.css
@@ -10,3 +10,8 @@ tr {
 .amount{
     text-align: right;
 }
+.header {
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+}
