--- a/src/app/component/account/account-lines-upload/account-lines-upload.component.css
+++ b/src/app/component/account/account-lines-upload/account-lines-upload.component.css
@@ -1,3 +1,22 @@
 .file-upload-div {
     width: 100%;
 }
+.file-upload-div mat-toolbar{
+    width: 100%;
+}
+.file-upload-input {
+    min-width: 600px;
+}
+.file-upload-input button{
+    margin: 20px;
+    min-width: 100px;
+}
+#fileInput {
+    position: absolute;
+    cursor: pointer;
+    z-index: 10;
+    opacity: 0;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+}
