--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,7 +1,19 @@
 <mat-grid-list cols="2" rowHeight="2:1">
     <mat-grid-tile *ngFor="let account of accounts">
         <mat-card>
-            <mat-card-content><a [routerLink]="['/account']" [queryParams]="{url:account._links.self.href}">{{account.name}}</a></mat-card-content>
+            <mat-card-header><h1>{{account.name}}</h1></mat-card-header>
+            <mat-card-content>
+                <app-bank-displayer [link]="account._links['bank'].href"></app-bank-displayer>
+                
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-button [routerLink]="['/account']" [queryParams]="{url:account._links.self.href}">
+                    Details
+                </button>
+            </mat-card-actions>
+            <mat-card-footer>
+                <app-account-sum [account]="account"></app-account-sum>
+            </mat-card-footer>
         </mat-card>    
     </mat-grid-tile>
 </mat-grid-list>
